# rpmsg-frame

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  README_zh.md
cmake/toolchains/: rk3506-arm-linux-gnueabihf.cmake
docs/: rframe.md  tty_driver.md
python/: main.py
src/: CMakeLists.txt  add.h  command_config.h  daemon.c  daemon.h  main.c  pts.c  pts.h  rframe.c  rframe.h  tty_driver.c  tty_driver.h
tests/: CMakeLists.txt  test_add.c  test_pts.c  test_rframe.c
